objects/eOrders__c.object
<CustomObject>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GAS application</description>
        <inlineHelpText>Check the box if the Order Request needs to be archived.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Number__c</fullName>
        <description>Identifier used internally with GAS Team</description>
        <inlineHelpText>Identifier used internally with GAS Team</inlineHelpText>
        <label>Call Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.Contract_End_Date__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Active contract associated with Vendor</description>
        <inlineHelpText>Active contract associated with Vendor</inlineHelpText>
        <label>Vendor Contract</label>
        <referenceTo>EPA_Contract__c</referenceTo>
        <relationshipLabel>eOrders</relationshipLabel>
        <relationshipName>eOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Comments to help describe the needs, uses, and etc. of the eOrder</description>
        <inlineHelpText>Comments to help describe the needs, uses, and etc. of the eOrder</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <description>Total Cost of the sum of associated eOrder Items</description>
        <inlineHelpText>Total Cost of the sum of associated eOrder Items</inlineHelpText>
        <label>Order Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Delivery_Date__c</fullName>
        <description>GAS application.</description>
        <label>Order Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Effective_Date__c</fullName>
        <label>Order Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <displayFormat>EPA-PO-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>eOrders</relationshipLabel>
        <relationshipName>eOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GAS application.</description>
        <inlineHelpText>Choose the Organization for which you want to create an eOrder.</inlineHelpText>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eOrders (Organization Name)</relationshipLabel>
        <relationshipName>eOrders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <description>Purchase Order Date</description>
        <inlineHelpText>Purchase Order Date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Purchase Order Number</description>
        <inlineHelpText>Purchase Order Number</inlineHelpText>
        <label>PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Pickup_Date__c</fullName>
        <description>Gas application.</description>
        <label>Requested Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <formula>Owner:User.FirstName &amp; " " &amp;  Owner:User.LastName</formula>
        <label>Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current state of the eOrder</description>
        <inlineHelpText>The current state of the eOrder</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                    <color>#78C953</color>
                    <label>Activated</label>
                </value>
                <value>
                    <fullName>Return Order Placed</fullName>
                    <color>#CC33CC</color>
                    <label>Return Order Placed</label>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                    <color>#E27001</color>
                    <label>Order Placed</label>
                </value>
                <value>
                    <fullName>Partial Order Received</fullName>
                    <color>#F3D904</color>
                    <label>Partial Order Received</label>
                </value>
                <value>
                    <fullName>Full Order Received</fullName>
                    <color>#A845DC</color>
                    <label>Full Order Received</label>
                </value>
                <value>
                    <fullName>Order Closed</fullName>
                    <color>#A53711</color>
                    <label>Order Closed</label>
                </value>
                <value>
                    <fullName>Return Order Closed</fullName>
                    <color>#333333</color>
                    <label>Return Order Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Contract_Name__c</fullName>
        <formula>Contract__r.Vendor__r.Name</formula>
        <label>Vendor Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <formula>Vendor_Name__r.Id</formula>
        <label>Vendor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose the Vendor for which you want to create an eOrder</description>
        <inlineHelpText>Choose the Vendor for which you want to create an eOrder</inlineHelpText>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>GAS Vendors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eOrders</relationshipLabel>
        <relationshipName>eOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Custom Object to Capture Orders placed for GAS Order Management Application.</description>
    <label>eOrder</label>
    <nameField>
        <displayFormat>EPA-EO-{000000000}</displayFormat>
        <label>eOrder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Activated_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <label>GAS Activated eOrders</label>
    </listViews>
    <listViews>
        <fullName>Archived_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Archive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GAS Archived eOrders</label>
    </listViews>
    <listViews>
        <fullName>Closed_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Order Closed</value>
        </filters>
        <label>GAS Closed eOrders</label>
    </listViews>
    <listViews>
        <fullName>Draft_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>GAS Draft eOrders</label>
    </listViews>
    <listViews>
        <fullName>Full_Order_Received_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Full Order Received</value>
        </filters>
        <label>GAS Full Order Received eOrders</label>
    </listViews>
    <listViews>
        <fullName>GAS_All_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>GAS All eOrders</label>
    </listViews>
    <listViews>
        <fullName>Partial_Order_Received_eOrders</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Partial Order Received</value>
        </filters>
        <label>GAS Partial Order Received eOrders</label>
    </listViews>
    <recordTypes>
        <fullName>GAS_eOrder_Admin</fullName>
        <active>true</active>
        <description>Create eOrders to request cylinders from Vendors</description>
        <label>GAS eOrder Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>GAS_eOrder_Return</fullName>
        <active>true</active>
        <description>Create eOrders to return empty cylinders</description>
        <label>GAS eOrder Return</label>
    </recordTypes>
</CustomObject>